--- a/src/app/components/header-admin/header-admin.component.html
+++ b/src/app/components/header-admin/header-admin.component.html
@@ -1,9 +1,9 @@
-
-
 <!-- Header Admin-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Santiago de Compostela eCommerce</a>
+        <a class="navbar-brand text-turquoise font-weight-bold" href="#">
+            Santiago de Compostela eCommerce
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         ADMIN
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -23,7 +23,7 @@
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" routerLink="/logout">Salir</a></li>
                     </ul>
-                  </li>
+                </li>
             </ul>
         </div>
     </div>
