17-03 modificando el buscador 12:10

--- a/src/app/components/header-user/header-user.component.html
+++ b/src/app/components/header-user/header-user.component.html
@@ -13,8 +13,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Buscar productos..." aria-label="Search" style="border-radius: 25px; border: 1px solid #00d9d9;">
-            <button class=" btn-outline-turquoise" type="submit" style="border-radius: 25px;">Buscar</button>
+            <app-product-search></app-product-search>
           </form>
         </li>
       </ul>
